# OTUS_2023_C07_HW

./: LICENSE  README.md
DZ_01/: main.c  readme.md  запуск_сборки.sh
DZ_02/: CMakeLists.txt  main.c  readme.md
DZ_03/: CMakeLists.txt  main.c  readme.md
DZ_04/: CMakeLists.txt  main.c  readme.md
DZ_04/img/: сырой_код.txt
DZ_05/: readme.md
DZ_06/: readme.md  запуск_сборки.sh
DZ_07/: readme.md
DZ_07/img/: clib-package.diff  corrected_clib-package.c
DZ_07/img/Заметки_исходники/: make_valgrind_test.txt  Новый текстовый документ.txt  примечание
DZ_15/: CMakeLists.txt  main.c  readme.md
ДЗ_01+/: CMakeLists.txt  readme.md
